2012-12-17  Fabien Penso <fabien.penso@conovae.com>

	* Atom feed
  * Photo urls
  * 8h

2012-12-08  Fabien Penso <fabien.penso@conovae.com>

	* Multiphoto edits
  * 10h

2012-11-07  Fabien Penso <fabien.penso@conovae.com>

	* Sortable images, etc.
  * 18h

2012-11-06  Fabien Penso <fabien.penso@conovae.com>

	* Sortable stories
  * 6h

2012-11-05  Fabien Penso <fabien.penso@conovae.com>

	* First
  * 5h