@@ -1,5 +1,5 @@
 class ApplicationController < ActionController::Base
-  layout 'fixedlayout'
+  layout :choose_layout
   protect_from_forgery
 
   before_filter :set_photographer
@@ -7,5 +7,10 @@ class ApplicationController < ActionController::Base
   protected
   def set_photographer
     @current_photographer = User.find_by_specific_url(request.server_name, :include => [:stories])
+  end
+
+  def choose_layout
+    "fixedlayout"
+    "adminfixed"
   end
 end
