@@ -1,0 +1,74 @@
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="muted">Heritage</h3>
+      </div>
+
+      <hr>
+
+      <div class="jumbotron">
+        <h1>Gallery, bullshit free!</h1>
+        <p class="lead">
+				Tired of bullshit softwares for setting up a quick gallery? Try
+				Heritage, an OpenSource Ruby on Rails project allowing you to host your
+				own gallery.
+				</p>
+        <a class="btn btn-large btn-success" href="http://admin.heritage.io">Try it now</a>
+      </div>
+
+      <hr>
+
+      <div class="row-fluid marketing">
+        <div class="span6">
+          <h4>OpenSource</h4>
+					<p>
+					The BSD License selected for the Heritage codebase allows you to do
+					business, hassle free.
+					</p>
+
+          <h4>Google Indexing</h4>
+					<p>
+					Heritage tries its best for you to be indexed quickly and properly by
+					Google. Fill all photo's title and description, optimize your SEO.
+					</p>
+
+          <h4>Sales</h4>
+					<p>
+					Heritage allows you to set your price, and sell your photos. You
+					manage your prints, your stock, but visitor can buy within one click.
+					</p>
+        </div>
+
+        <div class="span6">
+          <h4>Speed</h4>
+					<p>
+					When visiting a photography website, most visitors want to have speed
+					first. They don't want to wait for loading photos. Heritage focus on
+					this.
+					</p>
+
+          <h4>Newsletters</h4>
+					<p>
+					The most important thing for you as a photographer is to keep in
+					touch with your visitors. They can add their email address, so you
+					can send them your news.
+					</p>
+
+          <h4>Social Networks</h4>
+					<p>
+					Facebook and Twitter are important, we offer both to link from your
+					website, and to Facebook. Post a Wall post and see your photos
+					displayed properly.
+					</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="footer">
+        <p>&copy; Fabien Penso 2012</p>
+      </div>
