@@ -1,3 +1,9 @@
+2012-12-18  Fabien Penso <fabien.penso@conovae.com>
+
+  * Newsletter form
+  * Front page for heritage
+  * 8h
+
 2012-12-17  Fabien Penso <fabien.penso@conovae.com>
 
 	* Atom feed
